ndb_restore.result, ndb_restore.test:   Changed to use information_schema to check auto_increment Ndb.cpp:   Bug #33534   Bad performance of INSERT's in auto_incremented tables: Saving highest seen value when setting auto_increment fields ndb_auto_increment.result:   Regenerated result

mysql-test/suite/ndb/r/ndb_auto_increment.result:
  Regenerated result
mysql-test/suite/ndb/r/ndb_restore.result:
  Changed to use information_schema to check auto_increment
mysql-test/suite/ndb/t/ndb_restore.test:
  Changed to use information_schema to check auto_increment
storage/ndb/src/ndbapi/Ndb.cpp:
  Bug #33534   Bad performance of INSERT's in auto_incremented tables: Saving highest seen value when setting auto_increment fields